# apidoc/openapi/paths/provide_service/cats_stores_store_id_provide_services_provide_service_id.json
@@ -62,24 +62,10 @@
         }
       },
       "400": {
-        "description": "バリデーションエラー",
-        "content": {
-          "application/json": {
-            "schema": {
-              "$ref": "../../components/responses/error/validation_error_response.json#/definitions/validation_error_response"
-            }
-          }
-        }
+        "$ref": "../components/responses/error/validation_error_response.json#/responses/validation_error_response"
       },
       "401": {
-        "description": "認証エラー",
-        "content": {
-          "application/json": {
-            "schema": {
-              "$ref": "../../components/responses/error/authentication_error_response.json#/definitions/authentication_error_response"
-            }
-          }
-        }
+        "$ref": "../components/responses/error/authentication_error_response.json#/responses/authentication_error_response"
       },
       "404": {
         "description": "Idが見つからない"
@@ -121,24 +107,10 @@
         }
       },
       "400": {
-        "description": "バリデーションエラー",
-        "content": {
-          "application/json": {
-            "schema": {
-              "$ref": "../../components/responses/error/validation_error_response.json#/definitions/validation_error_response"
-            }
-          }
-        }
+        "$ref": "../components/responses/error/validation_error_response.json#/responses/validation_error_response"
       },
       "401": {
-        "description": "認証エラー",
-        "content": {
-          "application/json": {
-            "schema": {
-              "$ref": "../../components/responses/error/authentication_error_response.json#/definitions/authentication_error_response"
-            }
-          }
-        }
+        "$ref": "../components/responses/error/authentication_error_response.json#/responses/authentication_error_response"
       },
       "404": {
         "description": "Idが見つからない"
@@ -176,15 +148,11 @@
       "204": {
         "description": "正常系"
       },
+      "400": {
+        "$ref": "../components/responses/error/validation_error_response.json#/responses/validation_error_response"
+      },
       "401": {
-        "description": "認証エラー",
-        "content": {
-          "application/json": {
-            "schema": {
-              "$ref": "../../components/responses/error/authentication_error_response.json#/definitions/authentication_error_response"
-            }
-          }
-        }
+        "$ref": "../components/responses/error/authentication_error_response.json#/responses/authentication_error_response"
       },
       "404": {
         "description": "Idが見つからない"
